Resolve all nine code review findings at Boundary B
Addresses the NOT APPROVED review of the CardDemo COBOL-to-Java migration
(156 files reviewed, 12 failing, 1 CRITICAL + 8 MAJOR findings).

F1 CRITICAL - production applied-seed rejection. Adds
ProductionSeedRejectionCallback, registered under the prod profile alone,
refusing start-up when flyway_schema_history records a seed version, when
user_security holds any of the ten reserved fixture identities, or when five
seeded tables match their cardinalities simultaneously. Measured and recorded
that Flyway 11 does NOT reject an already-seeded database on its own, because
it ignores future migrations by default; that gap is what this callback closes.
45 new tests, including a refresh-level proof that the refusal precedes bean
initialisation and leaves seeded rows intact.

F2 MAJOR - Flyway topology. Deletes V1_1__create_batch_metadata.sql so the
inventory is exactly V1-V4 and Spring Batch owns its own metadata schema
(initialize-schema: always). The four scripts stay FLAT in db/migration and
production is held to the schema by spring.flyway.target=2, which is what the
V3 and V4 specifications require: both direct that no subdirectory be created,
because a Flyway location is scanned recursively and a directory therefore
cannot isolate the seeds. An intermediate revision of this work split the
scripts across schema/ and seed/ directories; that split is withdrawn and the
round trip is recorded as DL-119, with three guards inverted so a third attempt
fails a test rather than passing review.

F3 MAJOR - cryptographic configuration. Pins the field-encryption key to a
fixed literal in the fixture-bearing profiles so seeded ciphertext is always
openable, keeps the production key an environment variable with no fallback,
adds real decryptability validation to the sealing callback, and withdraws a
false atomicity claim: canHandleInTransaction returns true but AFTER_MIGRATE
fires after the migration transaction commits.

F4 MAJOR